# contracts

./: README.md  rust-toolchain.toml
contracts/Erc20Contract/: Cargo.toml  lib.rs
contracts/NftContract/: Cargo.toml  lib.rs
logics/: Cargo.toml
logics/impls/payable_mint/: payable_mint.rs  types.rs
logics/traits/: payable_mint.rs
